<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ThanksActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_sixteen"
        android:text="@string/thanks_you_for_n_your_reservation"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_twenty_four" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_sixteen"
        android:src="@drawable/lunch_box" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="@dimen/dp_sixteen"
            android:layout_marginBottom="@dimen/dp_sixteen"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/seats"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/phone_number"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/total_price"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="@dimen/dp_four"
            android:layout_marginTop="@dimen/dp_sixteen"
            android:layout_marginBottom="@dimen/dp_sixteen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:id="@+id/seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/seats"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/phone_number"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_twelve"
                android:text="@string/total_price"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_eighteen" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:onClick="backToHome"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGreen"
        android:text="Back To Home"/>


</RelativeLayout>